--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/main.css">
-  <!-- <link rel="stylesheet" href="./dist/main.css"> -->
+  <!-- <link rel="stylesheet" href="./styles/main.css"> -->
+  <link rel="stylesheet" href="./dist/main.css">
   <title>Serhiy Boreyko</title>
 </head>
 <body>
