--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./styles/main.css"> -->
-  <link rel="stylesheet" href="./dist/main.css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet"> -->
+  <link rel="stylesheet" href="./styles/main.css">
+  <!-- <link rel="stylesheet" href="./dist/main.css"> -->
   <title>Serhiy Boreyko</title>
 </head>
 <body>
@@ -22,7 +22,31 @@
     </ul>
   </header>
   <main>
-
+    <div class="wrap">
+      <div class="col">
+        <h1>Phone</h1>
+        <p>+380 (66) 091 66 13</p>
+      </div>
+      <div class="col">
+        <h1>Email</h1>
+        <a href="mailto:jestersunborn@gmail.com">jestersunborn@gmail.com</a>
+      </div>
+      <div class="col">
+        <h1>Address</h1>
+        <p>Chernivtsi, Ukraine</p>
+      </div>
+    </div>
   </main>
+  <footer>
+    <ul class="socials">
+      <li><a href="https://t.me/jestersunborn">Telegram</a></li>
+      <li><a href="https://twitter.com/jestersunborn">Twitter</a></li>
+      <li><a href="https://facebook.com/jestersunborn">Facebook</a></li>
+      <li><a href="https://github.com/jestersunborn">GitHub</a></li>
+      <li><a href="https://linkedin.com/">LinkedIn</a></li>
+      <li><a href="https://instagram.com/jestersunborn">Instagram</a></li>
+      <li><a href="https://vk.com/jestersunborn">VK</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
