Update LinkedIn link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li><a href="https://twitter.com/jestersunborn">Twitter</a></li>
       <li><a href="https://facebook.com/jestersunborn">Facebook</a></li>
       <li><a href="https://github.com/jestersunborn">GitHub</a></li>
-      <li><a href="https://linkedin.com/">LinkedIn</a></li>
+      <li><a href="https://linkedin.com/in/serhiy-boreyko-742570135/">LinkedIn</a></li>
       <li><a href="https://instagram.com/jestersunborn">Instagram</a></li>
       <li><a href="https://vk.com/jestersunborn">VK</a></li>
     </ul>
